Update post template

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: home
 title: Home
 ---
 <p class="intro">
-Helping removing <a href="/about.html">complexity</a> from software development through understanding.
+Helping remove <a href="/about.html">complexity</a> from software development through understanding.
 </p>
 <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
